finished home page and worked on footer

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,5 +1,5 @@
 
-{% extends 'blog/base.html' %}
+<!-- {% extends 'blog/base.html' %}
 
 {% block content %}
     {% for post in posts %}
@@ -13,4 +13,4 @@
         </div>
     {% endfor %}
 {% endblock content%}
-
+ -->
