--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -4,17 +4,29 @@ body, p {
     font-family: 'Lora', serif;
 }
    
-h1 {
+h1 { /* large uppercase "mont" */
     font-family: 'Montserrat', sans-serif;
     font-weight: 300;
     text-transform: uppercase;
     font-size: 8vw;
 }
 
-h2, h3, h4, h5, h6 {
+h2{ /* medium uppercase "mont" */
     font-family: 'Montserrat', sans-serif;
     font-weight: 300;
     text-transform: uppercase;
+    font-size: 5.5vw;
+}
+
+h3 { /* small lowercase "mont" */
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 300;
+    font-size: 4vw;
+}
+
+h4 { /* medium lowercase "lora" */
+    font-family: 'Lora', serif;
+    font-weight: 300;
     font-size: 4vw;
 }
 /*font changes*/
@@ -30,12 +42,14 @@ h2, h3, h4, h5, h6 {
 
 /* css grid */
 .grid{
+    background-color: #f8f1e5; /* tells background color of evenly numbered tiles */
+
     display: grid; /* says that the display is a grid */
     grid-template-columns: 1fr 1fr; /* tells how many (auto, 1fr)  columns and the size of each */
     grid-template-areas: 
     "title title"
     "header header"
-    "sidebar sidebar"
+    "side-image side-image"
     "content content"
     "footer footer";
 }
@@ -50,11 +64,12 @@ h2, h3, h4, h5, h6 {
     padding: 2vw;
 }
 
-.sidebar{
-    grid-area: sidebar;
+.side-image{
+    grid-area: side-image;
+    padding: 0vw 0vw 2vw 0vw;
     
 }
-.sidebar img{
+.side-image img{
     object-fit: cover;
     width: 100%;
     height: 100%;
@@ -67,19 +82,16 @@ h2, h3, h4, h5, h6 {
 
 .footer{
     grid-area: footer;
-    padding: 2vw;
-
+    background-color: #2f3131;
 }
 
-.grid div:nth-child(even){
-    background-color: #f8f1e5; /* tells background color of evenly numbered tiles */
+.social-media{
+    padding: 4vw;
 }
 
-.grid div:nth-child(odd){
-    background-color: #f8f1e5; /* tells background color of oddly numbered tiles */
+.site-buttons{
+    display: inline;
 }
-
-  
 
 @media screen and (min-width: 736px){ /* this is for non phone users */
     .grid{
@@ -88,14 +100,207 @@ h2, h3, h4, h5, h6 {
         grid-template-areas: 
         "title title"
         "header header"
-        "sidebar content"
+        "side-image content"
         "footer footer";
-           
     }
-    
 }
 
 /* end css grid */
+
+
+
+/* footer  */
+.content1{
+    position: relative;
+    margin: 130px auto;
+    text-align: center;
+    padding: 0 20px;
+}
+
+.content .text{ /* the text in the footer */
+    font-size: ;
+    color: #f8f1e5;
+}
+
+.content .p{
+    font-size: 2.1875rem;
+    font-weight: 600;
+    color: #f8f1e5;
+}
+
+footer{
+    position: absolute;
+    width: 100%;
+    background: #2f3131;
+}
+
+.main-content{
+    display: flex;
+}
+
+.main-content .box{
+    flex-basis: 50%;
+    padding: 10px 20px;
+}
+
+.box h2{ /* the headers of the footer 'about us, address, contact us' */
+    color: #f8f1e5;
+    font-size: 30px;
+}
+
+.box .content{
+    margin: 20px 0 0 0;
+    position: relative;
+}
+
+.box .content:before{ /*next to the underline of the headers of the footer */
+    position: absolute;
+    content: '';
+    top: -10px;
+    height: 2px;
+    width: 100%;
+    background: #2f3131;
+}
+
+.box .content:after{ /* the underline of the headers of the footer */
+    position: absolute;
+    content: '';
+    height: 2px;
+    width: 15%;
+    background: #f9ba32;
+    top: -10px;
+}
+
+.left .content p{ /* 'about us' paragraph section */
+    color: #f8f1e5;
+    size: 1rem;
+}
+
+.left .content .social{
+    margin: 20px 0 0 0;
+}
+
+.left .content .social a{ /* the social buttons interior*/
+    padding: 0 2px;
+    color: #f8f1e5;
+}
+
+.left .content .social a span{ /* the social buttons */
+    height: 40px;
+    width: 40px;
+    background: #f9ba32;
+    line-height: 40px;
+    text-align: center;
+    font-size: 1rem;
+    border-radius: 5px;
+    transition: 0.3s;
+}
+
+.left .content .social a span:hover{ /* social buttons hover */
+    background: #426e86;
+}
+
+.center .content .fas{ /* address buttons */
+    font-size: 1rem;
+    background: #f9ba32;
+    height: 45px;
+    width: 45px;
+    line-height: 45px;
+    text-align: center;
+    border-radius: 50%;
+    transition: 0.3s;
+    cursor: pointer;
+}
+
+.center .content .fas:hover{ /* 'address' section buttons hover */
+    background: #426e86;
+}
+
+.center .content .text{ /* the text in the 'address' section */
+    font-size: 1rem;
+    font-weight: 500;
+    padding-left: 10px;
+}
+
+.center .content .phone{
+    margin: 15px 0;
+}
+
+.right form .text{ /* the label 'email' and 'message' text */
+    font-size: 1rem;
+    margin-bottom: 2px;
+    color: #f8f1e5;
+}
+
+.right form .msg{
+    margin-top: 10px;
+}
+
+.right form input, .right form textarea{ /* the 'email' and 'message' input */
+    width: 100%;
+    font-size: 1rem;
+    background: #f8f1e5;
+    padding-left: 10px;
+    border: 1px solid #f8f1e5;
+}
+
+.right form input:focus,
+.right form textarea:focus{ /* color when you click in them email and message textbox*/
+    outline-color: #f9ba32;
+}
+
+.right form input{ /* how tall the email input box is*/
+    height: 35px;
+}
+
+.right form .btn{ /* email and message send button */
+    margin-top: 10px;
+    padding-left: 0;
+}
+
+.right form .btn button{
+    height: 40px;
+    width: 100%;
+    border: none;
+    outline: none;
+    background: #426e86;
+    color: #f8f1e5;
+    font-size: 1.0625rem;
+    font-weight: 500;
+    cursor: pointer;
+    transition: .3s;
+}
+
+.right form .btn button:hover{
+    background: #f9ba32;
+}
+
+.bottom center{
+    padding: 5px;
+    font-size: 0.9375rem;
+    background: #2f3131;
+}
+
+.bottom center span {
+    color: #7a7467;
+    text-decoration: none;
+}
+
+@media screen and (max-width: 800px) {
+    footer{
+      position: absolute;
+    }
+    .main-content{
+      flex-wrap: wrap;
+      flex-direction: column;
+    }
+    .main-content .box{
+      margin: 5px 0;
+    }
+}
+/* end footer */
+
+
 
 
 /* carousel */
