--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,4 +1,4 @@
-{% extends 'blog/base.html' %}
+<!-- {% extends 'blog/base.html' %}
 
 {% block content %}
     <div class="post">
@@ -39,4 +39,4 @@
         <p>No comments here yet :(</p>
     {% endfor %}
 {% endblock %}
-
+ -->
