--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,7 +1,13 @@
+/* #f8f1e5 bone
+#2f3131 coal
+#f9ba32 yellow
+#426e86 steel blue */
 /* fonts */
 
-body, p {
+body p {
     font-family: 'Lora', serif;
+    padding: 2vw;
+
 }
    
 h1 { /* large uppercase "mont" */
@@ -9,6 +15,8 @@ h1 { /* large uppercase "mont" */
     font-weight: 300;
     text-transform: uppercase;
     font-size: 8vw;
+    padding: 2vw;
+
 }
 
 h2{ /* medium uppercase "mont" */
@@ -16,24 +24,32 @@ h2{ /* medium uppercase "mont" */
     font-weight: 300;
     text-transform: uppercase;
     font-size: 5.5vw;
+    padding: 2vw;
+
 }
 
 h3 { /* small lowercase "mont" */
     font-family: 'Montserrat', sans-serif;
     font-weight: 300;
     font-size: 4vw;
+    padding: 2vw;
+
 }
 
 h4 { /* medium lowercase "lora" */
     font-family: 'Lora', serif;
     font-weight: 300;
-    font-size: 4vw;
+    font-size: 50px;
+    padding: 2vw;
+
 }
 /*font changes*/
 .navbar a, .carousel-item .btn, .form-control{
     font-family: 'Montserrat', sans-serif;
     font-weight: 600;
     color: #2f3131;
+    padding: 2px;
+
     
 }
 
@@ -43,7 +59,6 @@ h4 { /* medium lowercase "lora" */
 /* css grid */
 .grid{
     background-color: #f8f1e5; /* tells background color of evenly numbered tiles */
-
     display: grid; /* says that the display is a grid */
     grid-template-columns: 1fr 1fr; /* tells how many (auto, 1fr)  columns and the size of each */
     grid-template-areas: 
@@ -51,22 +66,20 @@ h4 { /* medium lowercase "lora" */
     "header header"
     "side-image side-image"
     "content content"
-    "footer footer";
+    "bottom bottom"
+    ;
 }
 
 .title{
     grid-area: title;
-    padding: 2vw;
 }
 
 .header{
     grid-area: header;
-    padding: 2vw;
 }
 
 .side-image{
     grid-area: side-image;
-    padding: 0vw 0vw 2vw 0vw;
     
 }
 .side-image img{
@@ -77,21 +90,52 @@ h4 { /* medium lowercase "lora" */
 
 .content{
     grid-area: content;
-    padding: 2px 2vw 2px 2vw; 
 }
 
-.footer{
-    grid-area: footer;
-    background-color: #2f3131;
+.bottom{
+    grid-area: bottom;
+    background-color: #426e86;
+    color: #f9ba32;
+    padding: 2vw;
+    padding-bottom: 20px;
+    text-align: center;
 }
 
-.social-media{
-    padding: 4vw;
+.bottom .click-read-more {
+    padding: 10px;
+    border-radius: 4rem;
+    border:none;
 }
 
-.site-buttons{
-    display: inline;
+.bottom .click-read-more:hover {
+    padding: 10px;
+    border-radius: 4rem;
+    border-color: #f9ba32;
+    background-color: #f9ba32;
 }
+
+.bottom p{
+    grid-area: bottom;
+    text-align: center;
+    font-size: 20px;
+}
+
+.bottom h4{
+    grid-area: bottom;
+    padding: 2vw;
+    text-align: center;
+}
+
+.bottom .fas{
+    font-size: 1rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
+
+}
+
+
+
+
 
 @media screen and (min-width: 736px){ /* this is for non phone users */
     .grid{
@@ -100,8 +144,9 @@ h4 { /* medium lowercase "lora" */
         grid-template-areas: 
         "title title"
         "header header"
+        "bottom bottom"
         "side-image content"
-        "footer footer";
+        ;
     }
 }
 
@@ -118,7 +163,6 @@ h4 { /* medium lowercase "lora" */
 }
 
 .content .text{ /* the text in the footer */
-    font-size: ;
     color: #f8f1e5;
 }
 
@@ -275,13 +319,13 @@ footer{
     background: #f9ba32;
 }
 
-.bottom center{
+.bottomf center{
     padding: 5px;
     font-size: 0.9375rem;
     background: #2f3131;
 }
 
-.bottom center span {
+.bottomf center span {
     color: #7a7467;
     text-decoration: none;
 }
@@ -435,7 +479,8 @@ footer{
 }
 
 body { 
-    padding-top: 63px; /* prevents navbar overlapping on body */
+    padding-top: 60px; /* prevents navbar overlapping on body */
+
 }
 
 .navbar-toggler .button:hover{
@@ -451,6 +496,8 @@ body {
 
 .form-control{
     border-radius: 4rem; /*rounded for search input */
+    text-align: left;
+    text-indent: 10px;
 }
 
 /* end navbar
